--- a/Documents/css/desktop.css
+++ b/Documents/css/desktop.css
@@ -1,9 +1,9 @@
 @font-face {
 	font-family: Rotis-SansSeriffor-ACCN-Bold;
-	src:url('./fonts/Rotis-SansSeriffor-ACCN-Bold.eot');
-	src:url('./fonts/Rotis-SansSeriffor-ACCN-Bold.eot?iefix') format('embedded-opentype');
-	src: url('./fonts/Rotis-SansSeriffor-ACCN-Bold.otf');
+	src:url('./fonts/RotisSansSerifforACCN-Bold.eot?')format('embedded-opentype');
+	src :url('./fonts/RotisSansSerifforACCN-Bold.otf')format('opentype');
 }
+
 .body-bg {
 	margin: 7% auto;
 }
@@ -16,7 +16,7 @@
 .home-page-bg{
 	background-size: 100% 100%;
     background-repeat: no-repeat;
-	height: 595px;
+	height: 655px;
 	width: 900px;
 	margin: auto;
 }
@@ -67,7 +67,7 @@
 	font-size: 2em;
 	color: #FFF;
 	width: 35%;
-	margin: 7% 0 0 8%;
+	margin: 0 0 0 8%;
 	padding-top:20%;
 }
 .std-btn {
@@ -193,7 +193,7 @@
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	width: 900px;
-	height: 595px;
+	height: 655px;
 	margin:auto;
 }
 .ladder-img, .ladding-ladder-img {
@@ -211,13 +211,16 @@
 }
 .question-text {
 	font-family:Rotis-SansSeriffor-ACCN-Bold;
-	margin: 7% 0 0 8%;
+	margin: 7% 0 3% 8%;
 	font-size: 2em;
 	width: 85%;
 	color: #FFF500;
+	
 }
 .first-option {
-	margin-top: 3% !important;
+	
+	
+	
 }
 .answer-text {
 	font-family:Rotis-SansSeriffor-ACCN-Bold;
