--- a/Documents/css/mobile.css
+++ b/Documents/css/mobile.css
@@ -1,6 +1,9 @@
 @font-face {
 	font-family: Rotis-SansSeriffor-ACCN-Bold;
-	src: url('./fonts/RotisSansSerifforACCN-Bold.otf');
+	src: url('./../fonts/RotisSansSerifforACCN-Bold.otf');
+}
+body{
+	margin:0px;
 }
 .body-bg{
 	background:#2A4385;
@@ -8,21 +11,15 @@
 	margin:0px;
 	overflow:hidden;
 }
-body
-{
-	margin:0px;
-}
 .page-bg {
 	background: #2A4385;
-	
-	
 	margin: auto;
 	position: absolute;
 	height: 100% !important;
 	width: 100%;
 }
 .greater-than-img{
-	
+	background-image:url('./../images/grtr.png');
 	background-size: 100% 100%;
     background-repeat: no-repeat;
 	width: 244px;
@@ -30,7 +27,7 @@ body
 	margin: 15% 0 0 5%;
 }
 .home-page-bg{
-	
+	background-image:url('./../images/m-bg-girl.png');
 	background-size: 100% 100%;
     background-repeat: no-repeat;
 	height: 100%;
@@ -47,18 +44,17 @@ body
 	text-decoration: inherit;
 }
 .ladding-ladder-img{
-	
+	background-image:url('./../images/SidePanel.png');
 	background-size: 100% 100%;
     background-repeat: no-repeat;
 	width: 185px;
 	height: 292px;
 }
 .congrats-page-bg{
-	
+	background-image:url('./../images/m-bg-congrats.png');
 	background-size: 100% 100%;
     background-repeat: no-repeat;
 	width: 100%;
-	height: 100%;
 	position:absolute;
 }
 .landing-ladder-container,.question-ladder-container{
@@ -70,7 +66,7 @@ body
 	color: #FFF;
 	width: 75%;
 	margin: 20% 0 0 5%;
-	padding-top:40%;
+	padding-top:20%;
 }
 .home-btn-container{
 	width:100%;
@@ -79,12 +75,13 @@ body
 	font-family:Rotis-SansSeriffor-ACCN-Bold;
 	color: #FFF500;
 	border: 3px solid #FFF500;
-	padding: 1%;
+	padding: 1.5% 0.5% 0.5% 0.5%;
 	font-size: 1em;
 	display: inline-block;
 	margin-top:10%;
 	text-align: center;
 	width:25%;
+	margin-bottom:3%;
 }
 .first-left-btn{
 	margin-left:5%;
@@ -107,12 +104,12 @@ body
 }
 .time-container{
 	font-family:Rotis-SansSeriffor-ACCN-Bold;
-	width: 20%;
+	width: 12%;
 	color: #FFF500;
 	border: 3px solid #FFF500;
 	padding: 0.7%;
 	font-size: 18px;
-	margin: 0 0 0 70%;
+	margin: 0 0 0 80%;
 	text-align: center;
 }
 .time-container-layout{
@@ -126,13 +123,11 @@ body
 	font-family:Rotis-SansSeriffor-ACCN-Bold;
 	border: 2px solid #FFF500;
 	display: inline-block;
-	width: 6%;
+	width: 6.5%;
 	margin-right: 1%;
+	padding-top:1.5%;
 	text-align: center;
-	color: #FFF500;
-	background-repeat: no-repeat;
-	background-size: 80% 80%;
-	background-position: 50% 50%;	
+	color: #FFF500;	
 }
 .question-text{
 	font-family:Rotis-SansSeriffor-ACCN-Bold;
@@ -166,8 +161,6 @@ body
 	width: 90%;
 	margin: 1% 0 0 5%;
 	font-size: 1.1em;
-	height: 150px;
-	overflow-y: scroll;
 }
 .social-icon-container{
 	background-size: 100% 100%;
@@ -178,39 +171,37 @@ body
 	margin-top: 8%;
 }
 .linked-in-icon{
-		
+	background-image:url('./../images/linked-in.png');	
 	margin-left:5%;
 }
 .facebook-icon{
-	
+	background-image:url('./../images/facebook.png');
 }
 .twitter-icon{
-	
+	background-image:url('./../images/twitter.png');
 }
 .congrats-ladder-container{
 	margin: 7% auto;
 }
 .award-img{
-	
+	background-image:url('./../images/award.png');
 	background-size: 100% 100%;
     background-repeat: no-repeat;
 	width: 175px;
 	height: 242px;	
-	margin: 10% auto 0 auto;
+	margin: 10% auto 2% auto;
 	position: relative;
 }
 .correct-answer{
 	border:1px solid #FFF;
 }
 .incorrect-answer{
-	
+	background-image:url('./../images/cross-img.png');
 	background-size: 100% 100%;
     background-repeat: no-repeat;
 	width: 24px;
 	height: 24px;
 }
-
-
 
 @media screen and (min-width: 319px) and (max-width: 321px) {
 	.greater-than-img{width: 170px;height: 80px;}
@@ -219,10 +210,8 @@ body
 	.question-text{font-size: 1.2em;}
 	.landing-para{width:90%;}
 	.social-icon-container{width: 30px;	height: 30px;}		
-	.time-container{width: 20%;margin: 0 0 0 70%;}
-	.landing-intro-text{overflow-y:scroll;height:160px;}
-	#congrats-page .landing-intro-text{overflow-y:scroll;height:140px;}
-
+	.time-container{width: 15%;margin: 0 0 0 77%;}
+	
 }
 @media screen and (min-width: 360px) and (max-width: 420px) {
 	.greater-than-img{width: 190px;height: 110px;}
@@ -231,103 +220,77 @@ body
 	.question-text{font-size: 1.3em;}
 	.landing-para{width:90%;}
 	.social-icon-container{width: 30px;	height: 30px;}	
-	.time-container{width: 20%;margin: 0 0 0 70%;}
-	.landing-intro-text{overflow-y:scroll;height:160px;}
-	#congrats-page .landing-intro-text{overflow-y:scroll;height:140px;}
+	.time-container{width: 15%;margin: 0 0 0 77%;}
 }
 @media screen and (min-height: 600px) and (max-height: 800px) {
-	#congrats-page .landing-intro-text {
+	/*#congrats-page .landing-intro-text {
 		overflow-y: scroll;
 		height: 190px;
-	}
+	}*/
 }
 @media screen and (min-width: 480px) and (max-width: 680px) {
-	.home-question-text {
-		margin: 10% 0 0 5%;
+	.home-question-text{
+		margin: 5% 0 0 5%;
 		padding-top: 0%;
 	}
-	.std-btn {
-		margin-top: 5%;
+	.std-btn{
+		margin-top:5%;
 		width: 20%;
-	}
-	.landing-intro-text {
-		height: 180px;
-		overflow-y: scroll;
 	}
 	.quiz-number-container {
 		margin: 10% 5% 0 5%;
 	}
-	.quiz-number {
-		width: 7.7%;
+	.quiz-number{
+		width:7.5%;
 	}
-	.congrats-page-bg {
-		position: relative;
-		overflow-y: scroll;
-	}
-	.award-img {
-		top: 8%;
-		position: relative;
-		margin: auto;
-	}
-	.social-icon-container {
-		margin-top: 0%;
+	.social-icon-container{
+		margin-top:5%;
 	}
 }
 @media screen and (min-width: 680px) and (max-width: 1080px) {
-	.home-question-text {
+	.home-question-text{
 		margin: 10% 0 0 5%;
 		padding-top: 5%;
 		font-size: 2.5em;
 	}
-	.std-btn {
-		margin-top: 5%;
+	.std-btn{
+		margin-top:5%;
 		width: 17%;
 		font-size: 1.6em;
 	}
-	.landing-title, .congrats-text, .answer-title {
+	.landing-title, .congrats-text,.answer-title{
 		font-size: 3em;
 	}
-	.landing-para, .time-container, .option-text {
+	.landing-para,.time-container,.option-text{
 		font-size: 1.5em;
 	}
-	.answer-text {
-		font-size: 2.2em;
+	.answer-text{
+		font-size:2.2em;
 	}
-	.question-text {
-		font-size: 2.8em;
+	.question-text{
+		font-size:2.8em;
 	}
-	.quiz-number {
+	.quiz-number{
 		border: 2px solid #FFF500;
 		font-size: 2em;
 	}
-	.landing-intro-text {
+	.landing-intro-text{
 		height: 200px !important;
 		overflow-y: scroll;
 	}
 	.quiz-number-container {
 		margin: 10% 5% 0 5%;
 	}
-	.quiz-number {
-		width: 7.8%;
+	.quiz-number{
+		width:7.8%;
 	}
-	.answer-container {
-		height: 350px;
-		overflow-y: auto;
+	.answer-container{
 		margin: 5% 7% 0 5%;
 	}
-	.congrats-page-bg {
-		position: absolute;
-		overflow-y: scroll;
+	.social-icon-container{
+		margin-top:5%;
 	}
-	.award-img {
-		top: 8%;
-		position: relative;
-		margin: auto;
-	}
-	.social-icon-container {
-		margin-top: 5%;
-	}
-	.ladding-ladder-img {
+	.ladding-ladder-img{
 		width: 285px;
 		height: 450px;
 	}
