--- a/Documents/css/desktop.css
+++ b/Documents/css/desktop.css
@@ -4,7 +4,10 @@
 	src :url('./fonts/RotisSansSerifforACCN-Bold.otf')format('opentype');
 	src: url('./fonts/RotisSansSerifforACCN-Bold.woff')  format('woff');
 }
-
+.body
+{
+	font-size:12px;
+}
 .body-bg {
 	margin: 7% auto;
 }
