--- a/Documents/css/mobile.css
+++ b/Documents/css/mobile.css
@@ -23,6 +23,26 @@ body{
 	min-height: 100%;
 	width: 100%;
 }
+
+
+.loader_wanted
+{
+	width: 60%;
+	height:50px;
+	border: 2px black solid;
+	border-radius: 10px;
+}
+
+#loader_anim
+{
+	width: 0%;
+	background-color: grey;
+	height: 50px;
+	border-radius: 8px;
+}
+
+
+
 .greater-than-img{
 	xbackground-image:url('./../images/grtr.png');
 	background-size: 100% 100%;
