--- a/Documents/css/mobile.css
+++ b/Documents/css/mobile.css
@@ -24,21 +24,37 @@ body{
 	width: 100%;
 }
 
+.loader-inner-container
+{
+	background-color:#FFF500;
+	width:0%;
+	height:100%;
+}
+.quiz-number-loader {
+	border: 5px solid #FFF500;
+	display: inline-block;
+	width: 12%;
+	height:60px;
+	color: #FFF500;
+	background-size: 80% 80%;
+	background-position: 50% 50%;
+}
+
 
 .loader_wanted
 {
 	width: 60%;
 	height:50px;
-	border: 2px black solid;
-	border-radius: 10px;
+	xborder: 2px black solid;
+	xborder-radius: 10px;
 }
 
 #loader_anim
 {
 	width: 0%;
-	background-color: grey;
+	xbackground-color: grey;
 	height: 50px;
-	border-radius: 8px;
+	xborder-radius: 8px;
 }
 
 
@@ -75,6 +91,16 @@ body{
 	width: 185px;
 	height: 292px;
 }
+
+#landingPage .landing-intro-text{
+	overflow:auto;
+	overflow-x:hidden;
+	max-height:165px;
+}
+#landingPage .landing-para
+{
+	margin: 0 0 3% 5%;
+}
 .congrats-page-bg{
 	xbackground-image:url('./../images/m-bg-congrats.png');
 	background-size: 100% 100%;
@@ -94,6 +120,7 @@ body{
 	width: 75%;
 	margin: 20% 0 0 5%;
 	padding-top:20%;
+	padding-bottom:2%;
 }
 .home-btn-container{
 	width:100%;
