--- a/Documents/css/mobile.css
+++ b/Documents/css/mobile.css
@@ -33,7 +33,7 @@ body{
 .quiz-number-loader {
 	border: 5px solid #FFF500;
 	display: inline-block;
-	width: 12%;
+	width: 60px;
 	height:60px;
 	color: #FFF500;
 	background-size: 80% 80%;
