--- a/Documents/css/mobile.css
+++ b/Documents/css/mobile.css
@@ -36,8 +36,8 @@ body{
 	width: 60px;
 	height:60px;
 	color: #FFF500;
-	background-size: 80% 80%;
-	background-position: 50% 50%;
+	margin-left: 3%;
+
 }
 
 
