--- a/Documents/css/mobile.css
+++ b/Documents/css/mobile.css
@@ -33,8 +33,8 @@ body{
 .quiz-number-loader {
 	border: 5px solid #FFF500;
 	display: inline-block;
-	width: 60px;
-	height:60px;
+	width: 2em;
+	height:2em;
 	color: #FFF500;
 	margin-left: 3%;
 
@@ -44,17 +44,14 @@ body{
 .loader_wanted
 {
 	width: 60%;
-	height:50px;
-	xborder: 2px black solid;
-	xborder-radius: 10px;
+	height:100%;
+	
 }
 
 #loader_anim
 {
 	width: 0%;
-	xbackground-color: grey;
-	height: 50px;
-	xborder-radius: 8px;
+	
 }
 
 
@@ -129,7 +126,7 @@ body{
 	font-family:Rotis-SansSeriffor-ACCN-Bold;
 	color: #FFF500;
 	border: 3px solid #FFF500;
-	padding:2% 0.5% 0.5% 0.5%;
+	padding:2% 0.5% 1.5% 0.5%;
 	font-size: 1em;
 	display: inline-block;
 	margin-top:10%;
