--- a/Documents/css/desktop.css
+++ b/Documents/css/desktop.css
@@ -214,7 +214,7 @@ font-size:12px;
 .answer-title {
 	font-family:Rotis-SansSeriffor-ACCN-Bold;
 	font-size: 2.5em;
-	padding-top: 5%;
+	padding-top: 3%;
 	margin-left: 5%;
 }
 .answer-button-container {
@@ -268,7 +268,7 @@ font-size:12px;
 	width: 90%;
 	margin: 1% 0 0 5%;
 	font-size: 1.5em;
-	height: 150px;
+	height: 156px;
 	overflow-y: auto;
 }
 .social-icon-container {
@@ -309,4 +309,10 @@ font-size:12px;
 	height: 292px;
 	background-position: 58% 41%;
 	background-repeat: no-repeat;
+}
+
+
+#play-again-app
+{
+	cursor:pointer;
 }
