--- a/Documents/css/desktop.css
+++ b/Documents/css/desktop.css
@@ -1,12 +1,12 @@
+/* CSS changes*/
 @font-face {
-	font-family: Rotis-SansSeriffor-ACCN-Bold;
-	src:url('./fonts/RotisSansSerifforACCN-Bold.eot?')format('embedded-opentype');
-	src :url('./fonts/RotisSansSerifforACCN-Bold.otf')format('opentype');
-	src: url('./fonts/RotisSansSerifforACCN-Bold.woff')format('woff');
+	font-family: 'Rotis-SansSeriffor-ACCN-Bold';
+	src: url('./fonts/RotisSansSerifforACCN-Bold.eot?') format('embedded-opentype');
+	src: url('./fonts/RotisSansSerifforACCN-Bold.otf') format('opentype');
+	src: url('./fonts/RotisSansSerifforACCN-Bold.woff') format('woff');
 }
-body
-{
-font-size:12px;
+body {
+	font-size: 12px;
 }
 .body-bg {
 	margin: 7% auto;
@@ -17,35 +17,29 @@ font-size:12px;
 	width: 900px;
 	margin: auto;
 }
-.home-page-bg{
+.home-page-bg {
 	background-size: 100% 100%;
-    background-repeat: no-repeat;
+	background-repeat: no-repeat;
 	height: 655px;
 	width: 900px;
 	margin: auto;
 }
 .wqq-anchor-text {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
 	color: #FFF500;
 	font-size: 1em;
 	text-decoration: inherit;
-	text-decoration:underline;
+	text-decoration: underline;
 }
 
-.loader_wanted
-{
+.loader_wanted {
 	width: 60%;
-	height:100px;
-	xborder: 2px black solid;
-	xborder-radius: 10px;
+	height: 100px;
 }
 
-#loader_anim
-{
+#loader_anim {
 	width: 0%;
-	xbackground-color: grey;
 	height: 80px;
-	xborder-radius: 8px;
 }
 
 .greater-than-image-container {
@@ -84,15 +78,15 @@ font-size:12px;
 	padding-top: 8%;
 }
 .home-question-text {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
 	font-size: 2.7em;
 	color: #FFF;
 	width: 45%;
 	margin: 0 0 0 5%;
-	padding-top:5%;
+	padding-top: 5%;
 }
 .std-btn {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
 	width: 12%;
 	color: #FFF500;
 	border: 3px solid #FFF500;
@@ -116,15 +110,18 @@ font-size:12px;
 .button-text-container {
 	width: 60%;
 	float: left;
-	
 }
-#landingPage .landing-intro-text{
-	max-height:405px;
+#landingPage .landing-intro-text {
+	max-height: 405px;
 }
-.landing-continue-btn{width:20%;}
-.landing-start-btn{width:30%;}
+.landing-continue-btn {
+	width: 20%;
+}
+.landing-start-btn {
+	width: 30%;
+}
 .time-container {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
 	width: 45%;
 	color: #FFF500;
 	border: 3px solid #FFF500;
@@ -133,7 +130,7 @@ font-size:12px;
 	text-align: center;
 }
 .time-container-layout {
-	padding-top:10%;
+	padding-top: 10%;
 	float: right;
 	width: 20%;
 }
@@ -142,7 +139,7 @@ font-size:12px;
 	width: 100%;
 }
 .quiz-number-container {
-	padding-top: 10%;	
+	padding-top: 10%;
 	float: left;
 	width: 80%;
 }
@@ -158,23 +155,22 @@ font-size:12px;
 	margin-left: 7% !important;
 }
 
-.loader-inner-container
-{
-	background-color:yellow;
-	width:0%;
-	height:100%;
+.loader-inner-container {
+	background-color: yellow;
+	width: 0%;
+	height: 100%;
 }
 .quiz-number-loader {
 	border: 5px solid #FFF500;
 	display: inline-block;
 	width: 60px;
-	height:60px;
+	height: 60px;
 	color: #FFF500;
 	margin-left: 3%;
 }
 
 .quiz-number {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
 	border: 2px solid #FFF500;
 	display: inline-block;
 	width: 5%;
@@ -182,7 +178,7 @@ font-size:12px;
 	text-align: center;
 	color: #FFF500;
 	padding: 0.5%;
-        font-size:1.5em;  
+	font-size: 1.5em;
 	background-repeat: no-repeat;
 	background-size: 80% 80%;
 	background-position: 50% 50%;
@@ -194,15 +190,15 @@ font-size:12px;
 .question-submit-btn {
 	width: 17%;
 }
-.congrats-text{
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
-	font-size:2.5em;
-	color:#FFF500;
-	padding:10% 0 0 8%;
+.congrats-text {
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
+	font-size: 2.5em;
+	color: #FFF500;
+	padding: 10% 0 0 8%;
 }
 .landing-title {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
-	font-size:2.5em;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
+	font-size: 2.5em;
 	color: #FFF500;
 	padding: 10% 0 0 5%;
 }
@@ -212,7 +208,7 @@ font-size:12px;
 	background: #FFF500;
 }
 .answer-title {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
 	font-size: 2.5em;
 	padding-top: 3%;
 	margin-left: 5%;
@@ -222,10 +218,10 @@ font-size:12px;
 	width: 92.7%;
 }
 .option-text {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
 	margin: 1% 0 0 8%;
 	color: #FFF;
-	font-size:1.5em;
+	font-size: 1.5em;
 	padding-bottom: 1%;
 	font-size: 1.5em;
 	cursor: pointer;
@@ -235,7 +231,7 @@ font-size:12px;
 	background-repeat: no-repeat;
 	width: 900px;
 	height: 655px;
-	margin:auto;
+	margin: auto;
 }
 .ladder-img, .ladding-ladder-img {
 	background-size: 100% 100%;
@@ -244,27 +240,24 @@ font-size:12px;
 	height: 292px;
 }
 .landing-para {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
 	color: #FFF;
 	width: 80%;
 	margin: 3% 0 0 8%;
-	font-size:1.8em;
+	font-size: 1.8em;
 }
 .question-text {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
 	margin: 7% 0 3% 8%;
 	font-size: 2em;
 	width: 85%;
 	color: #FFF500;
-	
 }
 .first-option {
-	
-	
-	
+
 }
 .answer-text {
-	font-family:Rotis-SansSeriffor-ACCN-Bold;
+	font-family: Rotis-SansSeriffor-ACCN-Bold;
 	width: 90%;
 	margin: 1% 0 0 5%;
 	font-size: 1.5em;
@@ -282,7 +275,7 @@ font-size:12px;
 }
 .linked-in-icon {
 	background-image: url('./../images/linked-in.png');
-	margin-left:8%;
+	margin-left: 8%;
 }
 .facebook-icon {
 	background-image: url('./../images/facebook.png');
@@ -311,8 +304,6 @@ font-size:12px;
 	background-repeat: no-repeat;
 }
 
-
-#play-again-app
-{
-	cursor:pointer;
+#play-again-app {
+	cursor: pointer;
 }
